// Copyright 2013 Prometheus Team
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package dto;

message LabelPair {
  optional int64 version = 1 [default = 1];

  optional string name = 2;
  optional string value = 3;
}

message LabelName {
  optional int64 version = 1 [default = 1];

  optional string name = 2;
}

message Metric {
  optional int64 version = 1 [default = 1];

  repeated LabelPair label_pair = 2;
}

message Fingerprint {
  optional int64 version = 1 [default = 1];

  optional string signature = 2;
}

message FingerprintCollection {
  optional int64 version = 1 [default = 1];

  repeated Fingerprint member = 2;
}

message LabelSet {
  optional int64 version = 1 [default = 1];

  repeated LabelPair member = 2;
}

message SampleKey {
  optional int64 version = 1 [default = 1];

  optional Fingerprint fingerprint = 2;
  optional bytes timestamp = 3;
}

message SampleValue {
  optional int64 version = 1 [default = 1];

  optional float value = 2;
}

message MembershipIndexValue {
  optional int64 version = 1 [default = 1];
}
